--- a/market.html
+++ b/market.html
@@ -15,8 +15,8 @@
       document.addEventListener("DOMContentLoaded", function () {
         createTodoApp(
           document.getElementById("todo-app"),
-          "Список дел матери",
-          "mom"
+          "Список покупок на рынке",
+          "market"
         );
       });
     </script>
@@ -25,9 +25,13 @@
   <body>
     <div class="container mb-5">
       <nav class="nav">
-        <a href="index.html" class="nav-link nav-link--first">Мои дела</a>
-        <a href="dad.html" class="nav-link nav-link--second">Дела отца</a>
-        <a href="mom.html" class="nav-link nav-link--third">Дела матери</a>
+        <a href="index.html" class="nav-link nav-link--first"
+          >Мои текущие дела</a
+        >
+        <a href="vacation.html" class="nav-link nav-link--second"
+          >Планирование поездки</a
+        >
+        <a href="market.html" class="nav-link nav-link--third">Покупки</a>
       </nav>
     </div>
 
