--- a/vacation.html
+++ b/vacation.html
@@ -13,26 +13,34 @@
     <title>TODO</title>
     <script defer src="todo.js"></script>
     <script>
-     document.addEventListener("DOMContentLoaded", function () {
-        createTodoApp(document.getElementById("todo-app"), "Список дел отца", "dad");
+      document.addEventListener("DOMContentLoaded", function () {
+        createTodoApp(
+          document.getElementById("todo-app"),
+          "Планирование поездки",
+          "vacation"
+        );
       });
     </script>
   </head>
   <body>
     <div class="container mb-5">
       <nav class="nav">
-        <a href="index.html" class="nav-link nav-link--first">Мои дела</a>
-        <a href="dad.html" class="nav-link nav-link--second">Дела отца</a>
-        <a href="mom.html" class="nav-link nav-link--third">Дела матери</a>
+        <a href="index.html" class="nav-link nav-link--first"
+          >Мои текущие дела</a
+        >
+        <a href="vacation.html" class="nav-link nav-link--second"
+          >Планирование поездки</a
+        >
+        <a href="market.html" class="nav-link nav-link--third">Покупки</a>
       </nav>
     </div>
 
     <div id="todo-app" class="container inner-todo"></div>
-       <script
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
-    <script src = "https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.1/gsap.min.js" ></script>
-    </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.1/gsap.min.js"></script>
+  </body>
 </html>
